--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <a-scene embedded arjs vr-mode-ui="enabled: false" raycaster cursor="rayOrigin: mouse" renderer="antialias: true; alpha: true">
         <a-camera gps-camera></a-camera>
         <a-entity id="arrow">
-            <a-cylinder position="0, 0, -5" color="crimson" height="0.5" radius="0.05"></a-cylinder>
-            <a-cone position="0, 0.4, -5" color="tomato" height="0.3" radius-bottom="0.15" radius-top="0"></a-cone>
+            <a-cylinder position="0, 0, -5.4" rotation="90 0 0" color="crimson" height="0.5" radius="0.05"></a-cylinder>
+            <a-cone position="0, 0, -5" rotation="90 0 0" color="tomato" height="0.3" radius-bottom="0.15"></a-cone>
         </a-entity>
     </a-scene>
     <script src="script.js"></script>
